crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_oracle_tensor_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedOracleTensor;

fn main() {
    let _: UnvalidatedOracleTensor = serde_json::from_str("{}").unwrap();
}
